Fix table column misalignment when scrollable

--- a/src/stylesheets/layouts/table-pattern.styl
+++ b/src/stylesheets/layouts/table-pattern.styl
@@ -73,7 +73,7 @@ Styleguide table-pattern
 
   /* Elements */
   table
-    width: 100%
+    width: 100vw
     table-layout: fixed
     background-color: white
     border-collapse: collapse
