--- a/src/stylesheets/workbench/index.styl
+++ b/src/stylesheets/workbench/index.styl
@@ -125,7 +125,9 @@ $workbench-middle-width = 100% - (2 * $workbench-sidebar-width)
     $workbench-content()
     width: $workbench-content-width
     margin-left: auto
-
+    .table
+      table
+        width: 80vw
 
   // Animated slide-in. Only used in API key editor
   &__info-sidebar
